--- a/public/server_sent_event.html
+++ b/public/server_sent_event.html
@@ -22,11 +22,11 @@
             padding-left: 20px;
         }
     </style>
-    <title>Server Sent Event</title>
+    <title>Server-Sent Events</title>
 </head>
 <body>
     <main id="js-container">
-        <h1>Server Sent Event</h1>
+        <h1>Server-Sent Events</h1>
         <ul id="js-sse-list"></ul>
     </main>
     <script src="/public/js/util.js"></script>
